--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,16 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.3.4</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.3.2</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+		    <version>4.0</version>
+	    </dependency>
     </dependencies>
     <properties>
         <jersey.version>1.18.2</jersey.version>
